Add fix to run built JavaFX jar files