@@ -3,7 +3,7 @@
 ## TODO
 
 - [ ] Applications
-  - [ ] Create JavaFx application
+  - [ ] Create JavaFX application
     - [ ] Use a `.fxml` file
     - [ ] Run it
       - [ ] Windows
@@ -14,7 +14,7 @@
   - [ ] Create a binary data type narrowing/widening/cast showcase application
   - [ ] Create a tic-tac-toe application
     - [ ] CLI
-    - [ ] JavaFx
+    - [ ] JavaFX
   - [ ] Create a Java Spring Webserver
   - [ ] Java Tomcat?
 - [ ] Tooling
@@ -127,13 +127,23 @@ make
 
 ```powershell
 # Run:
-# > JavaFx project:
+# > JavaFX project:
 mvn javafx:run
 # Clean
 mvn clean
 # Create JAR
 mvn clean package
 ```
+
+> [!IMPORTANT]
+> To run a JavaFX `.jar` the OpenJFX library path needs to be explicitly set since it only contains the `.class` files and not the necessary platform specific binary files (e.g. `.so`, check with `jar tf path/to/target.jar`):
+>
+> ```sh
+> # openjfx was installed to /usr/lib/jvm/java-24-openjfx
+> java --module-path /usr/lib/jvm/java-24-openjfx/lib/ \
+>      --add-modules javafx.controls,javafx.fxml \
+>      -jar path/to/target.jar
+> ```
 
 ### Dev Tools
 
